<resources>
    <string name="app_name">Superheroes SQLite</string>
    <string name="power">Power</string>
    <string name="gender">Gender</string>
    <string name="name">Name</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
