<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".HeroListDialogFragment" android:id="@+id/container"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        tools:layout_editor_absoluteY="49dp" app:layout_constraintEnd_toEndOf="parent">
    <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="20dp"
            android:id="@+id/imageView"
    />
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content">
        <TextView
                android:text="@string/name"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:id="@+id/textView2"
                android:layout_marginEnd="10dp"/>
        <TextView
                android:text=""
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textViewHName"
        />
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content">
        <TextView
                android:text="@string/gender"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:id="@+id/textView4"
                android:layout_marginEnd="10dp"/>
        <TextView
                android:text=""
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textViewHGender"
        />
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content">
        <TextView
                android:text="@string/power"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_marginRight="10dp"
                android:id="@+id/textView6"
                android:layout_marginEnd="10dp"/>
        <TextView
                android:text=""
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:id="@+id/textViewHPower"
        />
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:visibility="gone">
        <Button
                android:text="@string/update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/btnUpdate" android:layout_weight="1"/>
        <Button
                android:text="@string/delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/btnDelete" android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>
